--- a/GrailDiary-1/GrailDiary-1/Base.lproj/Main.storyboard
+++ b/GrailDiary-1/GrailDiary-1/Base.lproj/Main.storyboard
@@ -62,6 +62,9 @@
                                                 <constraint firstItem="Ho4-h4-bEY" firstAttribute="centerY" secondItem="aNk-wt-Ped" secondAttribute="centerY" id="tBd-ky-WEn"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="gbm-hp-w3b" kind="show" identifier="ShowPOIDetailSegue" id="zVT-he-YtS"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -76,12 +79,159 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Grail Diary" id="Vtu-Bo-lPd">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="PWf-cL-38y"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="PWf-cL-38y">
+                            <connections>
+                                <segue destination="Pvn-8a-s8Q" kind="presentation" identifier="AddPOIModalSegue" id="8hK-z4-SeX"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="928.98550724637687" y="77.678571428571431"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="AXr-BF-BLm">
+            <objects>
+                <viewController id="gbm-hp-w3b" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="PqG-P3-qYh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SCX-4j-WAp">
+                                <rect key="frame" x="279" y="160" width="115" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Country" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WsM-ox-a8M">
+                                <rect key="frame" x="333" y="189" width="61" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Pic" translatesAutoresizingMaskIntoConstraints="NO" id="P94-2I-0mP">
+                                <rect key="frame" x="20" y="160" width="150" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="GWG-Wa-clA"/>
+                                    <constraint firstAttribute="width" secondItem="P94-2I-0mP" secondAttribute="height" multiplier="1:1" id="UeO-RM-vaU"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="SXF-Ta-eRo">
+                                <rect key="frame" x="20" y="411" width="374" height="431"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Clues" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ySX-Bk-zs4">
+                                <rect key="frame" x="20" y="350" width="43" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="fqS-bQ-Qtd"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="fqS-bQ-Qtd" firstAttribute="trailing" secondItem="ySX-Bk-zs4" secondAttribute="trailing" constant="351" id="4cE-VR-Jlh"/>
+                            <constraint firstItem="SXF-Ta-eRo" firstAttribute="trailing" secondItem="WsM-ox-a8M" secondAttribute="trailing" id="8F9-52-Rbq"/>
+                            <constraint firstItem="P94-2I-0mP" firstAttribute="leading" secondItem="fqS-bQ-Qtd" secondAttribute="leading" constant="20" id="CDI-ad-TCk"/>
+                            <constraint firstItem="fqS-bQ-Qtd" firstAttribute="bottom" secondItem="SXF-Ta-eRo" secondAttribute="bottom" constant="20" id="D8K-uo-9ug"/>
+                            <constraint firstItem="WsM-ox-a8M" firstAttribute="trailing" secondItem="SCX-4j-WAp" secondAttribute="trailing" id="QJ0-NA-T0I"/>
+                            <constraint firstItem="WsM-ox-a8M" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="P94-2I-0mP" secondAttribute="trailing" constant="8" id="StP-de-ch6"/>
+                            <constraint firstItem="SCX-4j-WAp" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="P94-2I-0mP" secondAttribute="trailing" constant="8" id="WmV-gN-6ul"/>
+                            <constraint firstItem="ySX-Bk-zs4" firstAttribute="leading" secondItem="P94-2I-0mP" secondAttribute="leading" id="YK4-Ji-8zA"/>
+                            <constraint firstItem="SCX-4j-WAp" firstAttribute="top" secondItem="P94-2I-0mP" secondAttribute="top" id="dd2-en-l6g"/>
+                            <constraint firstItem="SXF-Ta-eRo" firstAttribute="leading" secondItem="ySX-Bk-zs4" secondAttribute="leading" id="glb-YL-i1z"/>
+                            <constraint firstItem="SCX-4j-WAp" firstAttribute="top" secondItem="fqS-bQ-Qtd" secondAttribute="top" constant="20" id="kOf-4V-Mc5"/>
+                            <constraint firstItem="WsM-ox-a8M" firstAttribute="top" secondItem="SCX-4j-WAp" secondAttribute="bottom" constant="8" id="mCd-j2-uUa"/>
+                            <constraint firstItem="fqS-bQ-Qtd" firstAttribute="trailing" secondItem="SCX-4j-WAp" secondAttribute="trailing" constant="20" id="opo-kq-kh4"/>
+                            <constraint firstItem="ySX-Bk-zs4" firstAttribute="top" secondItem="P94-2I-0mP" secondAttribute="bottom" constant="40" id="uv6-vF-owe"/>
+                            <constraint firstItem="SXF-Ta-eRo" firstAttribute="top" secondItem="ySX-Bk-zs4" secondAttribute="bottom" constant="40" id="zhS-KC-V3s"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="sWK-lA-VlN"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qf4-B8-Vsr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1650.7246376811595" y="-139.28571428571428"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="fqn-6O-eNt">
+            <objects>
+                <viewController id="Pvn-8a-s8Q" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="b1m-Rr-u8n">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="JAV-rB-HBG">
+                                <rect key="frame" x="20" y="20" width="374" height="320"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New POI" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nqt-1e-dEy">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="37"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bSG-dm-JRM">
+                                        <rect key="frame" x="0.0" y="53" width="374" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Country" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BGu-f3-w7z">
+                                        <rect key="frame" x="0.0" y="103" width="374" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Clues" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2iL-3d-sYt">
+                                        <rect key="frame" x="0.0" y="153" width="374" height="17"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Clue 1" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hNb-hF-Kl1">
+                                        <rect key="frame" x="0.0" y="186" width="374" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Clue 2" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BlT-cl-Zy9">
+                                        <rect key="frame" x="0.0" y="236" width="374" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Clue 3" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xcf-9l-lwr">
+                                        <rect key="frame" x="0.0" y="286" width="374" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QBs-Yl-tfA">
+                                <rect key="frame" x="0.0" y="759" width="414" height="49"/>
+                                <items>
+                                    <barButtonItem systemItem="cancel" id="X12-id-rqQ"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="inR-hk-agx"/>
+                                    <barButtonItem systemItem="save" id="Pal-tl-rPu"/>
+                                </items>
+                            </toolbar>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="I9m-s2-2D9"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="QBs-Yl-tfA" firstAttribute="leading" secondItem="I9m-s2-2D9" secondAttribute="leading" id="GMJ-d6-l45"/>
+                            <constraint firstItem="QBs-Yl-tfA" firstAttribute="trailing" secondItem="I9m-s2-2D9" secondAttribute="trailing" id="Ttn-Pc-FEp"/>
+                            <constraint firstItem="QBs-Yl-tfA" firstAttribute="bottom" secondItem="I9m-s2-2D9" secondAttribute="bottom" id="fxc-ZV-AoH"/>
+                            <constraint firstItem="I9m-s2-2D9" firstAttribute="trailing" secondItem="JAV-rB-HBG" secondAttribute="trailing" constant="20" id="kGl-Fc-PfW"/>
+                            <constraint firstItem="JAV-rB-HBG" firstAttribute="leading" secondItem="I9m-s2-2D9" secondAttribute="leading" constant="20" id="mps-kE-hd4"/>
+                            <constraint firstItem="JAV-rB-HBG" firstAttribute="top" secondItem="I9m-s2-2D9" secondAttribute="top" constant="20" id="r8Z-aS-S9q"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qJm-PL-d9n" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1670" y="505"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="JHY-ga-G5Y">
@@ -103,6 +253,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Pic" width="3024" height="4032"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
