--- a/GrailDiary-1/GrailDiary-1/Storyboards/Base.lproj/Main.storyboard
+++ b/GrailDiary-1/GrailDiary-1/Storyboards/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="POICell" id="TKF-GS-BQ8">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="POICell" id="TKF-GS-BQ8" customClass="POITableViewCell" customModule="GrailDiary_1" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="24.5" width="414" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TKF-GS-BQ8" id="aNk-wt-Ped">
@@ -90,10 +90,10 @@
             </objects>
             <point key="canvasLocation" x="757" y="78"/>
         </scene>
-        <!--View Controller-->
+        <!--Detail View Controller-->
         <scene sceneID="AXr-BF-BLm">
             <objects>
-                <viewController id="gbm-hp-w3b" sceneMemberID="viewController">
+                <viewController id="gbm-hp-w3b" customClass="POIDetailViewController" customModule="GrailDiary_1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PqG-P3-qYh">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -158,10 +158,10 @@
             </objects>
             <point key="canvasLocation" x="1551" y="461"/>
         </scene>
-        <!--View Controller-->
+        <!--AddPOI View Controller-->
         <scene sceneID="fqn-6O-eNt">
             <objects>
-                <viewController id="Pvn-8a-s8Q" sceneMemberID="viewController">
+                <viewController id="Pvn-8a-s8Q" customClass="AddPOIViewController" customModule="GrailDiary_1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="b1m-Rr-u8n">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
